[Misc] Improve test a bit by fixing some code violations